--- a/index.html
+++ b/index.html
@@ -803,10 +803,10 @@
     <a href="https://wa.me/923249375759" target="_blank" class="text-green-500">
       <i class="fab fa-whatsapp"></i>
     </a>
-    <a href="https://www.facebook.com/yourpage" target="_blank" class="text-blue-600">
+    <a href="https://www.facebook.com/share/1C4tAXSspS/" target="_blank" class="text-blue-600">
       <i class="fab fa-facebook"></i>
     </a>
-    <a href="https://www.instagram.com/yourpage" target="_blank" class="text-pink-500">
+    <a href="https://www.instagram.com/mzr_life_essentials?igsh=MXJoNHVjbDFnNXlsdg==&utm_source=ig_contact_invite" target="_blank" class="text-pink-500">
       <i class="fab fa-instagram"></i>
     </a>
     <a href="https://www.youtube.com/@yourchannel" target="_blank" class="text-red-500">
@@ -975,4 +975,5 @@
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c2696eab5bec972',t:'MTc2OTE2Mzk1Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
  <script src="app.js"></script>
   </body>
+
 </html>
