--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8">
+    <!-- Google Search Console Verification – Second Property -->
+    <meta name="google-site-verification" content="72HdggYRkMUoC3-7bm-GwFZy70KcZfvAJPe95s3AySI" />
  </head>
  <body class="h-full scroll-smooth">
   <div class="app-wrapper bg-white"><!-- Navigation -->
@@ -977,3 +980,4 @@
   </body>
 
 </html>
+
